# robile_description

./: CMakeLists.txt  README.md  package.xml
gazebo/: gazebo_robile.xacro  gazebo_ros_control.xacro
robots/: 2_wheel_config.urdf.xacro  4_wheel_config.urdf.xacro  4_wheel_double_microscan_config.urdf.xacro  4_wheel_double_uam_config.urdf.xacro  4_wheel_lidar_config.urdf.xacro  6_wheel_config.urdf.xacro  robile_platform_2_active_wheel.urdf.xacro  robile_platform_4_wheel.urdf.xacro
urdf/base_macros/: brick_housing.urdf.xacro  caster_wheel.urdf.xacro  common.xacro  kelo_drive.urdf.xacro  kelo_drive_wheel.urdf.xacro  kelo_hub_wheel.urdf.xacro  materials.urdf.xacro  robile_body.urdf.xacro
urdf/robile_bricks/: robile_active_wheel_brick.urdf.xacro  robile_cpu_brick.urdf.xacro  robile_empty_brick.urdf.xacro  robile_master_battery_brick.urdf.xacro  robile_passive_wheel_brick.urdf.xacro  robile_slave_battery_brick.urdf.xacro
urdf/robile_modules/: robile_active_wheel.urdf.xacro  robile_cpu.urdf.xacro  robile_empty.urdf.xacro  robile_master_battery.urdf.xacro  robile_passive_wheel.urdf.xacro  robile_slave_battery.urdf.xacro
urdf/sensors/: common.xacro  datalogic.urdf.xacro  hokuyo_uam_05lpa.urdf.xacro  hokuyo_ust_10lx.urdf.xacro  micro_scan.urdf.xacro
