<?xml version="1.0"?>
<package format="2">
  <name>robile_description</name>
  <version>0.0.1</version>
  <description>Robot descriptions for the KELO robile in form of URDF files and meshes</description>

  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <maintainer email="blumenthal@locomotec.com">Sebastian Blumenthal</maintainer>

  <license>GPLv3</license>

  <author email="sushant.chavan@locomotec.com">Sushant Chavan</author>
  <author email="dharmin.bakaraniya@locomotec.com">Dharmin B.</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
